--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 成都前端交流群 - 206731784
+title: 北京前端交流群 - 578874693
 subtitle:
-description: 成都前端交流群是成都地区浏览量最大的中文前端门户网站，是由成都前端从业人员发起，为成都数以万计的互联网用户提供富有创意的前端新生活。
+description: 北京前端交流群是成都地区浏览量最大的中文前端门户网站，是由成都前端从业人员发起，为成都数以万计的互联网用户提供富有创意的前端新生活。
 author: 豪情
 language: zh-CN
 timezone:
