--- a/themes/free2mind/_config.yml
+++ b/themes/free2mind/_config.yml
@@ -4,64 +4,28 @@ theme: cerulean
 inverse: inverse
 
 menu:
-  - title: 热点文章
-    url: hot
+  - title: 首页
+    url:
     intro: "All the tags."
     icon: "fa fa-fire"
-  - title: 博主推荐
-    url: recommend
-    intro: "All the tags."
-    icon: "fa fa-volume-up"
-  - title: 文章归档
+  - title: 文章
     url: archives
     intro: "All the articles."
     icon: "fa fa-archive"
-  - title: 给我留言
-    url: message
-    intro: "All the tags."
-    icon: "fa fa-pencil"
-  - title: 关于本站
-    url: about
-    intro: "About me."
-    icon: "fa fa-info-circle"
   - title: 英雄榜
     url: hero
     intro: "heroes"
     icon: "fa fa-crosshairs"
 
 links:
-  - title: "Hexo"
-    url: http://hexo.io
-    intro: "My Linkin account."
-    icon: "fa fa-share"
-  - title: "我的github"
-    url: http://www.github.com/rudy-yuan
+  - title: "属于北京前端的github"
+    url: http://www.github.com/beijingjs
     intro: "My Github account."
     icon: "fa fa-github"
-  - title: "我的旧版博客"
-    url: http://yjiehn.sinaapp.com
-    intro: "My Linkin account."
-    icon: "fa fa-trash"
-  - title: "七牛云存储"
-    url: http://www.qiniu.com
-    intro: My Weibo account.
-    icon: fa fa-cloud-upload
-  - title: "北大互联网信息工程研发中心"
-    url: http://netlab.pkusz.edu.cn
-    intro: My Weibo account.
-    icon: fa fa-chain
-  - title: "武汉大学 计算机学院"
-    url: http://cs.whu.edu.cn
-    intro: My Weibo account.
-    icon: fa fa-chain
-  - title: "Hexo-Theme-Freemind"
-    url: http://github.com/wzpan/hexo-theme-freemind
-    intro: My Weibo account.
-    icon: fa fa-chain
-  - title: "WWT的博客"
-    url: http://www.wengweitao.com
-    intro: My Weibo account.
-    icon: fa fa-chain
+  - title: "联盟群"
+    url: http://jsfront.org
+    intro: "中国最大前端联盟组织."
+    icon: "fa fa-share"
 
 widgets:
   - search
@@ -75,7 +39,7 @@ widgets:
 rss:
 fancybox: true
 favicon: favicon.ico
-duoshuo_shortname: rudy-yuan
+duoshuo_shortname: beijingjs
 
 # Analytics
 google_analytics:
@@ -89,5 +53,5 @@ baidu_tongji:
 # swiftype_key: YYG5W2xNQTns7U8J3YqW
 
 # share widgets
-bdshare: false
+bdshare: true
 # jiathis: true
